add active current page style menu

--- a/about.html
+++ b/about.html
@@ -151,7 +151,8 @@
                     <nav class="menu-display">
                         <ul style="display: flex;">
                             <li>
-                                <a href="about.html" class="menu">About</a>
+                                <!-- temporary -->
+                                <a href="about.html" class="menu current">About</a>
                             </li>
                             <li>
                                 <a href="catalog.html" class="menu">Catalog</a>
