--- a/catalog.html
+++ b/catalog.html
@@ -154,7 +154,7 @@
                                 <a href="about.html" class="menu">About</a>
                             </li>
                             <li>
-                                <a href="catalog.html" class="menu">Catalog</a>
+                                <a href="catalog.html" class="menu current">Catalog</a>
                             </li>
                             <li>
                                 <a href="news.html" class="menu">News</a>
