--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
                                 <a href="news.html" class="menu">News</a>
                             </li>
                             <li>
-                                <a href="contact.html" class="menu">Contact</a>
+                                <a href="contact.html" class="menu current">Contact</a>
                             </li>
                             <form action="/action_page.php" class="search-menu">
                                 <input type="text" class="search-home" placeholder="What are you looking for?"
