--- a/news.html
+++ b/news.html
@@ -157,7 +157,7 @@
                                 <a href="catalog.html" class="menu">Catalog</a>
                             </li>
                             <li>
-                                <a href="news.html" class="menu">News</a>
+                                <a href="news.html" class="menu current">News</a>
                             </li>
                             <li>
                                 <a href="contact.html" class="menu">Contact</a>
