--- a/about.html
+++ b/about.html
@@ -57,9 +57,6 @@
     <!-- Theme Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
 
-    <!-- Responsive CSS -->
-    <link rel="stylesheet" href="css/responsive.css">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -74,6 +71,9 @@
 
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="css/responsive.css">
 
 
 
@@ -105,7 +105,7 @@
                 </div>
             </div>
         </div>
-        <header id="header" class="header-effect-shrink mobile"
+        <header id="header" class="header-effect-shrink mobile dark"
             data-plugin-options="{'stickyEnabled': true, 'stickyEffect': 'shrink', 'stickyEnableOnBoxed': true, 'stickyEnableOnMobile': true, 'stickyChangeLogo': true, 'stickyStartAt': 30, 'stickyHeaderContainerHeight': 70}"
             style="height: 101px; top: 0 !important;">
             <div class="header-body border-top-0">
@@ -274,7 +274,7 @@
                                 <h3>OUR SERVICES</h3>
                             </div>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 desktop">
                             <div class="list-services reveal fade-left">
                                 <ul>
                                     <li><span>Comic Illustration/Social Media Content</span></li>
@@ -282,7 +282,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 desktop">
                             <div class="list-services reveal fade-right">
                                 <ul>
                                     <li><span>Social Campaign Media Based Comic</span></li>
@@ -291,6 +291,16 @@
                             </div>
                         </div>
 
+                        <div class="col-lg-12 mobile">
+                            <div class="list-services reveal fade-left">
+                                <ul>
+                                    <li><span>Comic Illustration/Social Media Content</span></li>
+                                    <li><span>Animation</span></li>
+                                    <li><span>Social Campaign Media Based Comic</span></li>
+                                    <li><span>Social Media Account Management</span></li>
+                                </ul>
+                            </div>
+                        </div>
                         <div class="col-lg-12">
                             <img src="img/slider-kosmik-3.jpg"
                                 class="img-fluid img-our-service-about reveal fade-bottom" alt="...">
