--- a/catalog.html
+++ b/catalog.html
@@ -57,9 +57,6 @@
     <!-- Theme Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
 
-    <!-- Responsive CSS -->
-    <link rel="stylesheet" href="css/responsive.css">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -74,6 +71,9 @@
 
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="css/responsive.css">
 
 
 
@@ -105,7 +105,7 @@
                 </div>
             </div>
         </div>
-        <header id="header" class="header-effect-shrink mobile"
+        <header id="header" class="header-effect-shrink mobile dark"
             data-plugin-options="{'stickyEnabled': true, 'stickyEffect': 'shrink', 'stickyEnableOnBoxed': true, 'stickyEnableOnMobile': true, 'stickyChangeLogo': true, 'stickyStartAt': 30, 'stickyHeaderContainerHeight': 70}"
             style="height: 101px; top: 0 !important;">
             <div class="header-body border-top-0">
@@ -288,7 +288,7 @@
                                     <div id="pilot" class="tab-pane">
                                         <div class="container-fluid reveal fade-bottom">
                                             <div class="row">
-                                                <div class="col-lg-3">
+                                                <div class="col-lg-3 col-sm-6 col-xs-6">
                                                     <a href="single-pilot.html">
                                                         <div class="pilot-post col-yellow">
                                                             <img src="img/pilot-2.png">
@@ -299,7 +299,7 @@
                                                         </div>
                                                     </a>
                                                 </div>
-                                                <div class="col-lg-3">
+                                                <div class="col-lg-3 col-sm-6 col-xs-6">
                                                     <a href="single-pilot.html">
                                                         <div class="pilot-post col-yellow">
                                                             <img src="img/pilot-2.png">
@@ -310,7 +310,7 @@
                                                         </div>
                                                     </a>
                                                 </div>
-                                                <div class="col-lg-3">
+                                                <div class="col-lg-3 col-sm-6 col-xs-6">
                                                     <a href="single-pilot.html">
                                                         <div class="pilot-post col-yellow">
                                                             <img src="img/pilot-2.png">
@@ -321,7 +321,7 @@
                                                         </div>
                                                     </a>
                                                 </div>
-                                                <div class="col-lg-3">
+                                                <div class="col-lg-3 col-sm-6 col-xs-6">
                                                     <a href="single-pilot.html">
                                                         <div class="pilot-post col-yellow">
                                                             <img src="img/pilot-2.png">
@@ -332,7 +332,7 @@
                                                         </div>
                                                     </a>
                                                 </div>
-                                                <div class="col-lg-3">
+                                                <div class="col-lg-3 col-sm-6 col-xs-6">
                                                     <a href="single-pilot.html">
                                                         <div class="pilot-post col-yellow">
                                                             <img src="img/pilot-2.png">
@@ -343,7 +343,7 @@
                                                         </div>
                                                     </a>
                                                 </div>
-                                                <div class="col-lg-3">
+                                                <div class="col-lg-3 col-sm-6 col-xs-6">
                                                     <a href="single-pilot.html">
                                                         <div class="pilot-post col-yellow">
                                                             <img src="img/pilot-2.png">
@@ -354,7 +354,7 @@
                                                         </div>
                                                     </a>
                                                 </div>
-                                                <div class="col-lg-3">
+                                                <div class="col-lg-3 col-sm-6 col-xs-6">
                                                     <a href="single-pilot.html">
                                                         <div class="pilot-post col-yellow">
                                                             <img src="img/pilot-2.png">
@@ -365,7 +365,7 @@
                                                         </div>
                                                     </a>
                                                 </div>
-                                                <div class="col-lg-3">
+                                                <div class="col-lg-3 col-sm-6 col-xs-6">
                                                     <a href="single-pilot.html">
                                                         <div class="pilot-post col-yellow">
                                                             <img src="img/pilot-2.png">
