--- a/index.html
+++ b/index.html
@@ -57,9 +57,6 @@
     <!-- Theme Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
 
-    <!-- Responsive CSS -->
-    <link rel="stylesheet" href="css/responsive.css">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -74,6 +71,9 @@
 
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="css/responsive.css">
 
 
 
@@ -265,7 +265,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12 reveal fade-left">
-                            <img src="img/doodle-kosmik-1.png" alt="" class="img-doodle-1 reveal fade-left">
+                            <img src="img/doodle-kosmik-1.png" alt="" class="img-doodle-1 doodle reveal fade-left">
                             <h4 class="tag-featured">
                                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda itaque doloremque
                                 aut officiis magni, autem architecto libero mollitia. Necessitatibus velit doloribus
@@ -605,7 +605,7 @@
     <!-- UIkit JS -->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.1/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.1/dist/js/uikit-icons.min.js"></script>
-    
+
     <script src="js/script.js"></script>
 
 
