--- a/news.html
+++ b/news.html
@@ -57,9 +57,6 @@
     <!-- Theme Custom CSS -->
     <link rel="stylesheet" href="css/custom.css">
 
-    <!-- Responsive CSS -->
-    <link rel="stylesheet" href="css/responsive.css">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
@@ -74,6 +71,9 @@
 
     <!-- Style CSS -->
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="css/responsive.css">
 
 
 
@@ -105,7 +105,7 @@
                 </div>
             </div>
         </div>
-        <header id="header" class="header-effect-shrink mobile"
+        <header id="header" class="header-effect-shrink mobile dark"
             data-plugin-options="{'stickyEnabled': true, 'stickyEffect': 'shrink', 'stickyEnableOnBoxed': true, 'stickyEnableOnMobile': true, 'stickyChangeLogo': true, 'stickyStartAt': 30, 'stickyHeaderContainerHeight': 70}"
             style="height: 101px; top: 0 !important;">
             <div class="header-body border-top-0">
