Add styles, and mobile responsive

--- a/about.html
+++ b/about.html
@@ -487,7 +487,7 @@
                                                             NAME</h5>
                                                         <h5 style="margin: 0; font-weight: bold; color:#000">TITLE
                                                         </h5>
-                                                        <p style="font-weight: bold; color:#000; font-size: 1vw">Founder
+                                                        <p style="font-weight: bold; color:#000;">Founder
                                                             of KOSMIK.
                                                             Co-founder of
                                                             Popcon Asia. Colorist for Marvel and DC.
