--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     <div class="body">
         <div class="side-header-narrow-bar desktop">
             <div class="side-header-narrow-bar-logo bg-color-primary d-flex justify-content-center">
-                <a href="index.html" class="p-3 mb-4 mt-2">
-                    <img alt="Porto" width="40" height="40" src="img/logo-planet.png" class="logo-planet">
+                <a href="index.html" class="mb-4 mt-2">
+                    <img alt="Kosmik" src="img/logo-planet.png" class="logo-planet">
                 </a>
             </div>
             <div class="side-header-narrow-bar-content d-flex align-items-center text-center h-100">
@@ -147,7 +147,7 @@
             <div class="header-row flex-row justify-content-center py-3">
                 <div class="header-logo-display d-flex">
                     <a href="index.html">
-                        <img alt="Kosmik" src="img/logo-kosmik.png" width="120" height="50">
+                        <img alt="Kosmik" src="img/logo-kosmik.png" width="80">
                     </a>
                     <nav class="menu-display">
                         <ul style="display: flex;">
@@ -506,7 +506,7 @@
             <section class="py-5 contact-home">
                 <div class="container-fluid reveal">
                     <div class="row">
-                        <img src="img/doodle-kosmik-2.png" alt="" srcset=""
+                        <img src="img/doodle-sabi2.png" alt="doodle" srcset=""
                             class="doodle doodle-contact reveal fade-right">
                         <img src="img/banner-kontak.jpg" class="img-fluid img-contact" alt="...">
                         <div class="col-lg-3">
