--- a/news.html
+++ b/news.html
@@ -83,8 +83,8 @@
     <div class="body">
         <div class="side-header-narrow-bar desktop">
             <div class="side-header-narrow-bar-logo bg-color-primary d-flex justify-content-center">
-                <a href="index.html" class="p-3 mb-4 mt-2">
-                    <img alt="Porto" width="40" height="40" src="img/logo-planet.png" class="logo-planet">
+                <a href="index.html" class="p-4 mb-4 mt-2">
+                    <img alt="Kosmik" src="img/logo-planet.png" class="logo-planet">
                 </a>
             </div>
             <div class="side-header-narrow-bar-content d-flex align-items-center text-center h-100">
@@ -315,7 +315,7 @@
                             </div>
                             <img src="img/doodle-sabi2.png" class="img-fluid doodle doodle-news reveal fade-left">
                         </div>
-                        <div class="col-lg-10 reveal fade-right">
+                        <div class="col-lg-10 reveal fade-right  pym-2">
                             <div class="container-fluid">
                                 <div class="row">
                                     <div class="col-lg-8">
@@ -325,11 +325,11 @@
                                     </div>
                                     <div class="col-lg-4">
                                         <h5>FUNFACT</h5>
-                                        <p style="font-size: 1vw">25 Jan 2022 by Lorem Ipsum</p>
-                                        <a href="single-news.html">
-                                            <h4>JUDUL ARTIKEL</h4>
-                                        </a>
-                                        <p style="position: absolute; bottom: 0">
+                                        <p>25 Jan 2022 by Lorem Ipsum</p>
+                                        
+                                            <h4><a href="single-news.html"></a>JUDUL ARTIKEL</a></h4>
+                                        
+                                        <p>
                                             Lorem ipsum dolor sit amet,
                                             consectetuer adipiscing elit,
                                             sed diam nonummy nibh
@@ -353,7 +353,7 @@
                                             <img src="img/news-1.jpg" class="img-fluid">
                                         </a>
                                         <div class="news-item-detail mb-5">
-                                            <p style="font-size: 1vw;"><strong style="color:#000">KATEGORI BERITA
+                                            <p class="news-item-title"><strong style="color:#000">KATEGORI BERITA
                                                 </strong>18 Jan 2022 by Lorem Ipsum</p>
                                             <a href="single-news.html">
                                                 <h4>JUDUL ARTIKEL LOREM IPSUM DOLOR SIT
@@ -366,7 +366,7 @@
                                             <img src="img/news-2.jpg" class="img-fluid">
                                         </a>
                                         <div class="news-item-detail mb-5">
-                                            <p style="font-size: 1vw;"><strong style="color:#000">KATEGORI BERITA
+                                            <p class="news-item-title"><strong style="color:#000">KATEGORI BERITA
                                                 </strong>18 Jan 2022 by Lorem Ipsum</p>
                                             <a href="single-news.html">
                                                 <h4>JUDUL ARTIKEL LOREM IPSUM DOLOR SIT
@@ -379,7 +379,7 @@
                                             <img src="img/news-3.jpg" class="img-fluid">
                                         </a>
                                         <div class="news-item-detail mb-5">
-                                            <p style="font-size: 1vw;"><strong style="color:#000">KATEGORI BERITA
+                                            <p class="news-item-title"><strong style="color:#000">KATEGORI BERITA
                                                 </strong>18 Jan 2022 by Lorem Ipsum</p>
                                             <a href="single-news.html">
                                                 <h4>JUDUL ARTIKEL LOREM IPSUM DOLOR SIT
@@ -392,7 +392,7 @@
                                             <img src="img/news-1.jpg" class="img-fluid">
                                         </a>
                                         <div class="news-item-detail mb-5">
-                                            <p style="font-size: 1vw;"><strong style="color:#000">KATEGORI BERITA
+                                            <p class="news-item-title"><strong style="color:#000">KATEGORI BERITA
                                                 </strong>18 Jan 2022 by Lorem Ipsum</p>
                                             <a href="single-news.html">
                                                 <h4>JUDUL ARTIKEL LOREM IPSUM DOLOR SIT
