--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     opacity: 0;
                     transition: 0.5s;
                 }
-                
+
                 .header-display.desktop:hover {
                     opacity: 1;
                 }
@@ -443,13 +443,13 @@
                                 <h4>JUDUL ARTIKEL
                                     LOREM IPSUM
                                     DOLOR SIT AMET SUI</h4>
-                                <p>
+                                <h4 class="grey-desc" style="font-weight: normal;">
                                     Lorem
                                     ipsum dolor sit
                                     amet,
                                     consectetuer adipiscing elit,
                                     sed diam nonummy nibh
-                                    euismod tincidunt ut</p>
+                                    euismod tincidunt ut</h4>
                             </div>
                         </div>
                         <div class="col-lg-9 col-xs-12">
