--- a/about.html
+++ b/about.html
@@ -237,7 +237,7 @@
 
         <main id="main" class="main">
 
-            <section style="background-color: #000;" class="py-3">
+            <section style="background-color: #111111;" class="py-3">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-3">
@@ -384,8 +384,7 @@
                                 <a href="#" uk-slider-item="next"><span
                                         class="glyphicon glyphicon-triangle-right"></span></a>
                             </div>
-                            <ul
-                                class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m uk-light">
+                            <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m">
                                 <li class="uk-transition-toggle" tabindex="0">
 
                                     <a type="button" data-toggle="modal" data-target="#teamModal">
@@ -595,7 +594,7 @@
     <!-- UIkit JS -->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.1/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.1/dist/js/uikit-icons.min.js"></script>
-    
+
     <script src="js/script.js"></script>
 
 </body>
