--- a/news.html
+++ b/news.html
@@ -323,7 +323,7 @@
                                             <img src="img/news-1.jpg" class="img-fluid">
                                         </a>
                                     </div>
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-4 pym-2">
                                         <h5>FUNFACT</h5>
                                         <p>25 Jan 2022 by Lorem Ipsum</p>
 
